--- a/src/app/components/Coins/Tabs/Tabs.module.css
+++ b/src/app/components/Coins/Tabs/Tabs.module.css
@@ -26,4 +26,8 @@
   display: flex;
   flex-wrap: wrap;
   gap: 1.5rem;
+  justify-content: center; /* Horizontally align items */
+}
+
+.tabPane > * {
 }
